--- a/.github/workflows/test-isl-programs.yaml
+++ b/.github/workflows/test-isl-programs.yaml
@@ -1,8 +1,6 @@
-on:
+on:  
+  push:
   pull_request:
-    types:
-      - "opened"
-      - "reopened"
     branches:
       - "main"
 jobs:
@@ -10,11 +8,11 @@ jobs:
     runs-on: "ubuntu-22.04"
     steps:
       - name: "Checkout Code"
-        uses: actions/checkout@v3
+        uses: "actions/checkout@v3"
       - name: "Setup Go"
-        uses: actions/setup-go@v3
+        uses: "actions/setup-go@v3"
         with:
           go-version: "1.19"
       - name: "Run Shell Script"
-        run: ls
+        run: "ls"
     
