--- a/.github/workflows/test-isl-programs.yaml
+++ b/.github/workflows/test-isl-programs.yaml
@@ -15,4 +15,6 @@ jobs:
           go-version: "1.19"
       - name: "Run Shell Script"
         run: "ls"
+      - name: "Test"
+        run: "go version"
     
