--- a/.github/workflows/test-isl-programs.yaml
+++ b/.github/workflows/test-isl-programs.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           go-version: "1.19"
       - name: "Build ISlash Executable"
-        run: "go build -o /usr/bin/islash"
+        run: "go build"
 
   build-matrix:
     needs: "environment-setup"
