--- a/docker-hub/Dockerfile
+++ b/docker-hub/Dockerfile
@@ -1,4 +1,5 @@
 # This Dockerfile was used to create the official ISlash image in Docker Hub.
+# In the *root* directory: docker build . -t magicmanatee/islash:VERSION -f docker-hub/Dockerfile
 
 # Stage to build the ISlash executable using Go.
 FROM golang:1.19 AS builder
